--- a/configs/default.toml
+++ b/configs/default.toml
@@ -7,8 +7,7 @@ modules_path = "./modules" # Path to modules
 # Example
 [cluster.ceph_test]                             # Title
 conf = "ceph.conf"                      # Config
-keyring = "ceph.client.apimon.keyring"   # Keyring
-user = "client.apimon"                   # Client name 
+user = "apimon"                   # Client name 
 type = "sata" # "sata"                   # Cluster type
 
 [SHDAPI]                                # Enable SHDAPI
